--- a/tp2/compte_rendu.tex
+++ b/tp2/compte_rendu.tex
@@ -53,7 +53,7 @@ Soit $D = \{premier\_cycle, first, hz, n, state, tic, tac\}$, avec $premier\_cyc
             tac $\leftarrow$ \textbf{if} premier\_cycle \textbf{then} false \textbf{else} first \&\& n $<$ 1 \&\& !state \&\& hz $>$ 0;\\
             premier\_cycle $\leftarrow$ false;}} (s0);
 \end{tikzpicture}
-
+\newpage
 \paragraph{Question 3}
 L'automate généré avec \texttt{lus2oc -2} contient 5 noeuds. On peut identifier les variables suivantes :
  \begin{itemize}
